fix: render ratings propoerly on mobile

--- a/frontend/src/styles/location.scss
+++ b/frontend/src/styles/location.scss
@@ -29,6 +29,9 @@
 .location-tags {
   grid-area: tags;
 
+  display: flex;
+  flex-wrap: wrap;
+
   margin: var(--spacing-2);
 }
 
