--- a/frontend/src/styles/ratings.scss
+++ b/frontend/src/styles/ratings.scss
@@ -16,3 +16,9 @@
   gap: var(--spacing-2);
   width: max-content;
 }
+
+@media screen and (max-width: 768px){
+  .ratings {
+    grid-template-columns: 1fr;
+  }
+}
